Updating code to CanaryMod b11